# FullBrainer

./: CMakeLists.txt  Cargo.toml  README.md  brain  brain.db  brain.sql  build.sh  fullBrainer  fullBrainer.cpp  start.sh  visualizer.cpp  visualizer.h
scripts/: build.sh
sql/: brain.sql
src/: brain.rs  db.rs  lib.rs  main.rs  utils.rs  visualizer.rs
